@@ -398,6 +398,7 @@ void			ScoreboardRenderer::renderScoreboard(void)
 {
   int i=0;
   int numPlayers;
+  int emailLen;
   Player** players;
   Player*  player;
   bool haveObs = false;
@@ -472,6 +473,8 @@ void			ScoreboardRenderer::renderScoreboard(void)
     }
   }
 
+
+  emailLen = BZDB.getIntClamped ("emailDispLen", 0, 128);
   huntSelectEvent = false;
   huntPositionEvent = 0;
   numHunted = 0;
@@ -484,9 +487,9 @@ void			ScoreboardRenderer::renderScoreboard(void)
       haveObs = true;
     }
     if (huntState==HUNT_SELECTING && i==huntPosition)
-      drawPlayerScore(player, x1, x2, x3, xs, (float)y, true);
+      drawPlayerScore(player, x1, x2, x3, xs, (float)y, emailLen, true);
     else
-      drawPlayerScore(player, x1, x2, x3, xs, (float)y, false);
+      drawPlayerScore(player, x1, x2, x3, xs, (float)y, emailLen, false);
     y -= dy;
     ++i;
   }
@@ -511,8 +514,16 @@ void      ScoreboardRenderer::stringAppendNormalized (std::string *s, float n)
 }
 
 
+std::string continuedString (std::string s, unsigned int len){
+  if ( s.size() == len  )
+    s[len-1] = '~';
+  return s;
+}
+
+
 void			ScoreboardRenderer::drawPlayerScore(const Player* player,
-			    float x1, float x2, float x3, float xs, float y, bool huntCursor)
+			    float x1, float x2, float x3, float xs, float y, 
+                            int emailLen, bool huntCursor)
 {
   // score
   char score[40], kills[40];
@@ -595,9 +606,13 @@ void			ScoreboardRenderer::drawPlayerScore(const Player* player,
   // callsign
   playerInfo += player->getCallSign();
   // email in parenthesis
-  if (player->getEmailAddress()[0] != '\0' && !BZDB.isTrue("hideEmails")) {
+  if (player->getEmailAddress()[0] != '\0' && emailLen>0) {
     playerInfo += " (";
-    playerInfo += player->getEmailAddress();
+
+//    playerInfo += std::string (player->getEmailAddress(), 0, emailLen);
+    playerInfo += continuedString (std::string (player->getEmailAddress(), 0, emailLen), emailLen);
+
+
     playerInfo += ")";
   }
   // carried flag
