@@ -164,6 +164,7 @@ DefaultDBItem	defaultDBItems[] = {
   // hud drawing
   { "hudGUIBorderOpacityFactor","0.75",			true,	StateDatabase::ReadWrite,	NULL },
   { "hideEmails",		"0",			true,	StateDatabase::ReadWrite,	NULL },
+  { "emailDispLen",		"32",			true,	StateDatabase::ReadWrite,	NULL },
 
   // last screenshot
   { "lastScreenshot",		"0",			true,	StateDatabase::ReadWrite,	NULL }
